# PicoDVI

./: Readme.md
software/: CMakeLists.txt
software/apps/bad_apple/video/: mkframes.sh
software/apps/mandel-full/: CMakeLists.txt  main.c  mandelbrot.c  mandelbrot.h
software/apps/moon/: main.c
software/apps/sprite_bounce/: CMakeLists.txt  main.c
software/apps/vista/: main.c
software/apps/vista-palette/: main.c
software/libdvi/: dvi.c  dvi.h  dvi_timing.c  dvi_timing.h  tmds_encode.S  tmds_encode.c  util_queue_u32_inline.h
